--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			</div>
 		</div-->
         <div id="content" class="row">
-			<div class="col-6">Select the number of active years for water resources</div>
+			<div class="col-6 flex-center"><span>Select the number of active years for water resources</span></div>
             <select id="value" class="col-3 col-span-3">
                 <option value="1">1 and up</option>
                 <option value="2">2 and up</option>
